# anchor-client-gen

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  RELEASE.md  package-lock.json  package.json  tsconfig.check.json  tsconfig.json
.github/actions/setup-solana/: action.yaml
.github/workflows/: tests.yaml
examples/basic-2/generated-client/: borsh.ts  programId.ts
examples/basic-2/generated-client/accounts/: Counter.ts  index.ts
examples/basic-2/generated-client/errors/: anchor.ts  index.ts
examples/basic-2/generated-client/instructions/: create.ts  increment.ts  index.ts
examples/basic-2/generated-client/utils/: index.ts
examples/tic-tac-toe/generated-client/: errors.ts  programId.ts
examples/tic-tac-toe/generated-client/accounts/: Game.ts  index.ts
examples/tic-tac-toe/generated-client/errors/: custom.ts  index.ts
examples/tic-tac-toe/generated-client/instructions/: index.ts  play.ts  setupGame.ts
examples/tic-tac-toe/generated-client/types/: GameState.ts  Sign.ts  Tile.ts  index.ts
examples/tic-tac-toe/generated-client/utils/: borsh.ts  borshAddress.ts
src/: accounts.ts  borsh.ts  common.ts  errors.ts  genBorsh.ts  instructions.ts  main.ts  programId.ts  types.ts  utils.ts
src/tests/: test.ts
src/tests/example-program-gen/exp/: errors.ts
tests/: borsh.spec.ts  borsh.test.ts  test.spec.ts  test.ts
tests/example-program-gen/: idl.json
tests/example-program-gen/exp/: errors.ts  programId.ts
tests/example-program/programs/example-program/: Cargo.toml  example_program.json
tests/example-program/programs/example-program/src/: lib.rs
(+21 files in other folders)
